--- a/index.html
+++ b/index.html
@@ -374,9 +374,9 @@
         <div class="section">
             <h2>📅 Calendario de tareas</h2>
             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
-                <button onclick="changeMonth(-1)" style="background: #6c757d;">&amp;lt; Mes Anterior</button>
+                <button onclick="changeMonth(-1)" style="background: #6c757d;">&lt; Mes Anterior</button>
                 <h3 id="currentMonthDisplay" style="margin: 0;"></h3>
-                <button onclick="changeMonth(1)" style="background: #6c757d;">Mes Siguiente &amp;gt;</button>
+                <button onclick="changeMonth(1)" style="background: #6c757d;">Mes Siguiente &gt;</button>
             </div>
             <div class="calendar" id="calendarView"></div>
         </div>
