--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 </div>
 
                 <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-                    <button onclick="exportTasks()">Exportar tareas</button>
+                    <button onclick="exportTasks()">Exportar a PDF</button>
                     <button onclick="openBackupWindow()" style="background:#ff9800">📂 Respaldo completadas</button> 
                 </div>
             </div>
