--- a/index.html
+++ b/index.html
@@ -336,10 +336,10 @@
                 <input id="taskDate" type="date"/> 
                 <input id="taskTime" type="time" title="Hora para el recordatorio (Opcional)"/> 
                 <select id="alertMinutes" title="Minutos de aviso previo a la hora">
-                    <option value="0">Sin Aviso</option>
+                    <option value="0" Selected>Sin Aviso</option>
                     <option value="5">Avisar 5 min antes</option>
                     <option value="10">Avisar 10 min antes</option>
-                    <option value="15" selected>Avisar 15 min antes</option>
+                    <option value="15">Avisar 15 min antes</option>
                     <option value="30">Avisar 30 min antes</option>
                     <option value="60">Avisar 1 hora antes</option>
                 </select>
